--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,19 @@
   "private": true,
   "dependencies": {
     "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "4.0.0-alpha.6",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
+    "font-awesome": "^4.7.0",
+    "golden-colors": "^2.0.0",
     "node-sass": "^4.5.3",
+    "preact": "^8.1.0",
     "sass-loader": "^6.0.5",
+    "three": "^0.85.2",
     "webpack": "^2.6.1"
   }
 }
