--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "preact": "^8.1.0",
     "sass-loader": "^6.0.5",
     "three": "^0.85.2",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "ws": "^3.0.0"
   }
 }
