--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,10 @@
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "4.0.0-alpha.6",
     "classnames": "^2.2.5",
+    "color-convert": "^1.9.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "font-awesome": "^4.7.0",
-    "golden-colors": "^2.0.0",
     "node-sass": "^4.5.3",
     "preact": "^8.1.0",
     "sass-loader": "^6.0.5",
