--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.5.3",
     "preact": "^8.1.0",
+    "preact-redux": "^2.0.1",
+    "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "three": "^0.85.2",
     "webpack": "^2.6.1",
