--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "server": "node ./bin/www",
-    "webpack": "cd frontend && rm -rf build && node_modules/.bin/webpack --watch"
+    "webpack": "cd frontend && rm -rf build && node_modules/.bin/webpack --watch",
+    "test": "NODE_ENV=test node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -14,6 +15,7 @@
     "express": "~4.15.2",
     "express-ws": "^3.0.0",
     "hbs": "~4.0.1",
+    "jasmine": "^2.7.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
